--- a/WarehouseEcommerce/Areas/Shop/Views/Products/_DynamicFilters.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/_DynamicFilters.cshtml
@@ -2,7 +2,7 @@
 @using Ganedata.Core.Entities.Domain
 
 
-<div class="col-md-3 col-sm-12">
+<div class="col-lg-3 col-md-12">
     <div class="filters cat-filter">
         <h2>Refined by</h2>
         <button type="button" class="btn filterCollapse" data-toggle="collapse" data-target="#accordion">
