account page, wishlist page and order history page modified according to BS4 with responsiveness Imported from Changeset 2468

--- a/WarehouseEcommerce/Areas/Shop/Views/User/OrderHistory.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/User/OrderHistory.cshtml
@@ -2,9 +2,9 @@
     ViewBag.Title = "OrderHistory";
 }
 
-    <div class="about bg-white custom-max-width m-auto pb-0">
+    <div class="row about bg-white custom-max-width m-auto pb-0">
                 @Html.Partial("_AccountSideBar")
-                <div class="col-md-9 col-sm-12 bg-white">
+                <div class="col-lg-9 col-md-12 bg-white">
                     <div class="about-cnt">
                         <div class="content-wrapper select">
                             <h2 class="text-uppercase">My Orders</h2>
