--- a/WarehouseEcommerce/Areas/Shop/Views/User/Account.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/User/Account.cshtml
@@ -2,9 +2,9 @@
     ViewBag.Title = "Account";
 }
 
-<div class="about bg-white custom-max-width m-auto pb-0">
+<div class="row about bg-white custom-max-width m-auto pb-0">
             @Html.Partial("_AccountSideBar")
-            <div class="col-md-9 col-sm-12 bg-white login my-account">
+            <div class="col-lg-9 col-md-12 bg-white login my-account">
                 <div class="about-cnt">
                     <div class="content-wrapper select">
                         <h2 class="text-uppercase">My Account</h2>
@@ -14,27 +14,27 @@
                         <form method="post" action="#">
                             <div class="">
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <input type="text" class="form-control input-md inputNew" size="18" placeholder="Enter your First Name">
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <input type="text" class="form-control input-md inputNew" size="18" placeholder="Enter your Last Name">
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <input type="email" class="form-control input-md inputNew" size="18" placeholder="Enter your E-mail ID">
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <input type="text" class="form-control input-md inputNew" size="18" placeholder="Enter your Mobile Number">
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <div class="button-submit">
                                             <button type="Submit" name="submitNewsletter" class="btn btn-block account-save-btn">Save Details</button>
                                         </div>
@@ -47,27 +47,27 @@
                         <form method="post" action="#">
                             <div class="">
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <input type="text" class="form-control input-md inputNew" size="18" placeholder="Address Line 1">
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <input type="text" class="form-control input-md inputNew" size="18" placeholder="Address Line 2">
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <input type="text" class="form-control input-md inputNew" size="18" placeholder="Land Mark">
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <input type="text" class="form-control input-md inputNew" size="18" placeholder="Zip Code">
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <select name="city">
                                                 <option>City 1</option>
@@ -75,7 +75,7 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <select name="State">
                                                 <option>State 1</option>
@@ -83,7 +83,7 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <select name="Country">
                                                 <option>Country 1</option>
@@ -91,7 +91,7 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="col-md-12">
+                                    <div class="col-lg-12">
                                         <div class="button-submit">
                                             <button type="Submit" name="submitNewsletter" class="btn btn-block account-save-btn">Save Details</button>
                                         </div>
@@ -104,22 +104,22 @@
                         <form method="post" action="#">
                             <div class="">
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <input type="password" class="form-control input-md inputNew" size="18" placeholder="Enter your old password">
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <input type="password" class="form-control input-md inputNew" size="18" placeholder="Enter your new password">
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <input type="password" class="form-control input-md inputNew" size="18" placeholder="Re-Enter your new password">
                                         </div>
                                     </div>
-                                    <div class="col-md-12">
+                                    <div class="col-lg-12">
                                         <div class="button-submit">
                                             <button type="Submit" name="submitNewsletter" class="btn btn-block account-save-btn">Reset Password</button>
                                         </div>
