--- a/WarehouseEcommerce/Areas/Shop/Views/User/WishList.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/User/WishList.cshtml
@@ -2,9 +2,9 @@
     ViewBag.Title = "WhishList";
 }
 
-<div class="about bg-white custom-max-width m-auto pb-0">
+<div class="row about bg-white custom-max-width m-auto pb-0">
             @Html.Partial("_AccountSideBar")
-            <div class="col-md-9 col-sm-12 bg-white my-account login">
+            <div class="col-lg-9 col-md-12 bg-white my-account login">
                 <div class="about-cnt">
                     <div class="content-wrapper select">
                         <h2 class="text-uppercase">WishList</h2>
